--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.6) unstable; urgency=low
+
+  * Bug #50087: add utility function to execute external programs
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 03 Sep 2019 17:24:23 +0200
+
 ucs-school-lib (12.1.5) unstable; urgency=low
 
   * Bug #50066: adjust use of departmentNumber after making it a multi value
