--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.43) unstable; urgency=low
+
+  * Bug #49726: fix test
+  * Bug #50087: fix test
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 04 Sep 2019 04:49:01 +0200
+
 ucs-test-ucsschool (6.0.42) unstable; urgency=low
 
   * Bug #50087: add tests for HTTP API
